--- a/client/src/style.css
+++ b/client/src/style.css
@@ -14,10 +14,13 @@ body {
 
 html,
 body,
-#root,
-.appContainer,
-.appContent {
+#root {
     height: 100%;
+}
+
+#root,
+.appContainer {
+    min-height: 100%;
 }
 
 h1 {
@@ -33,7 +36,6 @@ h1 {
 .appContent {
     background-color: #794b60;
     width: 100%;
-    height: 100%;
     border-radius: 50px 0 0 50px;
     padding: 20px;
 }
