--- a/client/src/components/SideNav/SideNav.module.css
+++ b/client/src/components/SideNav/SideNav.module.css
@@ -1,13 +1,19 @@
 .container {
-    color: #fff;
+    display: flex;
+    flex-direction: column;
     width: 100px;
+    color: #fff;
 }
 
-.circle {
+.circle,
+.hhaIcon {
     margin: 10px auto;
     text-align: center;
     height: 55px;
     width: 55px;
+}
+
+.circle {
     border-radius: 100%;
     font-size: 35px;
     cursor: pointer;
@@ -25,6 +31,17 @@
 
 .hhaIcon {
     display: block;
-    margin: 10px auto 30px auto;
-    width: 60%;
+    margin-bottom: 30px;
+}
+
+@media screen and (max-width: 800px) {
+    .container {
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .hhaIcon {
+        display: none;
+    }
 }
