--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,16 +2,6 @@
   to put all component /page styles in their respective
   .module.css files */
 
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-        "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #413144;
-    color: #eee;
-}
-
 html,
 body,
 #root {
@@ -21,6 +11,21 @@ body,
 #root,
 .appContainer {
     min-height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+        "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #eee;
+    min-width: 360px;
+}
+
+body,
+.appPageContainer {
+    background-color: #413144;
 }
 
 h1 {
@@ -48,5 +53,20 @@ h1 {
     margin-top: 20px;
     padding: 20px;
     border-radius: 30px;
-    background-color: #413144;
+}
+
+@media screen and (max-width: 800px) {
+    .appContainer {
+        flex-direction: column;
+    }
+
+    .appContent {
+        border-radius: 30px 30px 0 0;
+        min-height: calc(100vh - 75px);
+    }
+
+    .appPageTitle {
+        margin-left: 0;
+        text-align: center;
+    }
 }
