--- a/client/src/style.css
+++ b/client/src/style.css
@@ -25,7 +25,7 @@ body {
 
 body,
 .appPageContainer {
-    background-color: #413144;
+    background-color: #17223b;
 }
 
 h1 {
@@ -39,7 +39,7 @@ h1 {
 }
 
 .appContent {
-    background-color: #794b60;
+    background-color: #263859;
     width: 100%;
     border-radius: 50px 0 0 50px;
     padding: 20px;
@@ -57,12 +57,15 @@ h1 {
 
 @media screen and (max-width: 800px) {
     .appContainer {
-        flex-direction: column;
+        flex-direction: column-reverse;
+        height: 100%;
     }
 
     .appContent {
-        border-radius: 30px 30px 0 0;
-        min-height: calc(100vh - 75px);
+        border-radius: 0 0 30px 30px;
+        height: 100%;
+        overflow-x: auto;
+        overflow-y: auto;
     }
 
     .appPageTitle {
