--- a/client/src/components/SideNav/SideNav.module.css
+++ b/client/src/components/SideNav/SideNav.module.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 100px;
-    color: #fff;
 }
 
 .icon,
@@ -21,12 +20,12 @@
 }
 
 .icon:hover {
-    background-color: #6b778d;
+    background-color: #eeeeee44;
 }
 
 .active,
 .active:hover {
-    background-color: #ff6768;
+    background-color: #ffa768;
 }
 
 .hhaIcon {
