--- a/client/src/style.css
+++ b/client/src/style.css
@@ -24,7 +24,9 @@ body {
     color: #fff;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-weight: 400;
 }
 
@@ -52,6 +54,7 @@ h1, h2, h3 {
     padding: 20px;
     border-radius: 30px;
     background-color: #fff;
+    box-shadow: 0px 0px 10px #33333311;
 }
 
 @media screen and (max-width: 800px) {
