--- a/client/src/pages/Client/NewClient.module.css
+++ b/client/src/pages/Client/NewClient.module.css
@@ -33,3 +33,70 @@ hr {
     background: #f74a4a;
     color: white;
 }
+
+.caregiverInfo {
+    background: #6b778d;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.profileCard {
+    width: 18rem;
+    height: 18rem;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.profilePicture {
+    max-width: 100%;
+    max-height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.profileImgContainer {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.profileImgContainer:hover img {
+    opacity: 0.5;
+}
+
+.profileImgContainer:hover .uploadIcon {
+    opacity: 1; /* added */
+    top: 0; /* added */
+    z-index: 500;
+}
+
+.profileImgContainer:hover .uploadIcon div {
+    top: 45%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+}
+
+.profileImgContainer:hover .uploadIcon span {
+    top: 65%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+}
+
+.profileImgContainer .uploadIcon {
+    display: block;
+    position: absolute;
+    top: -100%;
+    opacity: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    text-align: center;
+    color: inherit;
+}
