--- a/client/src/pages/User/Edit.module.css
+++ b/client/src/pages/User/Edit.module.css
@@ -7,13 +7,17 @@
     padding: 60px;
     border-radius: 2.5ch;
 }
-
+.p{
+    font-size: 25px;
+    font-style: bold;
+}
 .btn {
     background-color: #273364; /* Blue background */
     color: white; /* Remove borders */
     border: 2px solid #e3e8f4; /* White text */
     float: right;
     margin:10px;
+    width: 100px;
     border-radius:1.5ch;
     padding: 12px 16px; /* Some padding */
     font-size: 16px; /* Set a font size */
@@ -32,8 +36,9 @@
     background-color: #273364;
     border-radius: 1ch;
     color:#fff;
-    width: 400px;
-    height: 30px;
+    width: 100%;
+    height: 35px;
+    /* position: relative; */
     border: 2px solid #e3e8f4;
     margin-bottom: 10px;
 }
@@ -41,4 +46,21 @@
 .form{
     margin-bottom: 10px;
     position: relative;
+    border-radius: 5px;
 }
+.form input[type="text"], .form textarea{
+    height: 1px;
+    padding: 15px;
+    width: 150%;
+}
+.form input[type="tel"], .form textarea{
+    height: 1px;
+    padding: 15px;
+    width: 150%;
+}
+.form input[type="email"], .form textarea{
+    height: 1px;
+    padding: 15px;
+    width: 150%;
+}
+
