--- a/client/src/pages/Client/NewClient.module.css
+++ b/client/src/pages/Client/NewClient.module.css
@@ -1,17 +1,3 @@
-/* body{
-  font-weight: bold;
-} */
-
-.customFileUpload {
-    border-radius: 50%;
-    display: inline-block;
-    position: relative;
-    padding: 6px;
-    cursor: pointer;
-    background: linear-gradient(270deg, #3954af, #79f1a4);
-    margin-bottom: 25px;
-}
-
 .checkbox {
     height: 15px;
     width: 15px;
@@ -20,51 +6,50 @@
 
 hr {
     border: 1px;
-    border-top: 1px solid white;
+    border-top: 1px solid black;
 }
 
 .submitBtn {
-    background: #ff6768;
+    background: rgb(255, 199, 120);
     color: white;
     margin-left: 1rem;
 }
 
 .submitBtn:hover {
-    background: #f74a4a;
+    background: rgb(253, 174, 63);
     color: white;
 }
 
 .caregiverInfo {
-    background: #6b778d;
+    background: rgba(0,0,0,.125);
     padding: 10px;
     border-radius: 10px;
 }
 
-.profileCard {
-    width: 18rem;
-    height: 18rem;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.profilePictureBlock {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    display: relative;
 }
 
 .profilePicture {
     max-width: 100%;
     max-height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
 }
 
 .profileImgContainer {
+    width:18rem;
+    height:18rem;
     position: relative;
-    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     overflow: hidden;
     cursor: pointer;
 }
 
 .profileImgContainer:hover img {
-    opacity: 0.5;
+    opacity: 0.3;
 }
 
 .profileImgContainer:hover .uploadIcon {
@@ -98,5 +83,12 @@ hr {
     bottom: 0;
     right: 0;
     text-align: center;
-    color: inherit;
+    color: white;
+}
+
+@media screen and (max-width: 1450px) {
+    .profileImgContainer {
+        width: 15rem;
+        height: 15rem;
+    }
 }
