--- a/server/templates/main.html
+++ b/server/templates/main.html
@@ -1,15 +1,5 @@
-{% extends "base.html" %}
-{% load static %}
-
-{% block title %}
-  main page
-{% endblock title %}
-
-{% block content %}
-  hello world
-{% endblock content %}
-
-{% block scripts %} 
-  <script src="{% static 'main.js' %}"></script>
+{% extends "base.html" %} {% load static %} {% block title %} main page {%
+endblock title %} {% block content %} hello world {% endblock content %} {%
+block scripts %}
+<script src="{% static 'main.js' %}"></script>
 {% endblock scripts %}
-
